--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-mvnw*
 .mvn/*
 .gitattributes
 
@@ -34,3 +33,4 @@ build/
 
 ### VS Code ###
 .vscode/
+/mvnw.cmd
